# dvc-spartan

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  stash.patch
.dvc/: config
conf/: config.yaml  params.yaml
core/utils/: compile_params.py
core/workflows/: ray_tune_rllib.py  tune_job.py
scripts/: .submit_job_to_branch.sh.swp  slurm_submit.sh  spartan_cascade.sh  spartan_test.sh  submit_job_to_branch.sh  submit_spartan_job.sh  sync_spartan_branch.sh  test.sh
